--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -1,9 +1,5 @@
-<div class="wrapper">
-  <app-header></app-header>
-  <sidebar></sidebar>
-  <div class="content-wrapper">
+<div >
+  <div >
     <router-outlet></router-outlet>
   </div>
-  <app-footer></app-footer>
-  <div id="sidebar-overlay" (click)="toggleSidebar()"></div>
 </div>
