--- a/angular/src/app/about/about.component.html
+++ b/angular/src/app/about/about.component.html
@@ -1,2 +1,3 @@
-﻿<app-preferred-day></app-preferred-day>
+﻿<!-- <app-preferred-day></app-preferred-day> -->
 <!-- <app-input></app-input> -->
+<app-header></app-header>
