--- a/angular/src/app/about/about.component.html
+++ b/angular/src/app/about/about.component.html
@@ -1,1 +1,3 @@
-﻿<app-calendar></app-calendar>
+﻿<app-header-custom></app-header-custom>
+<app-calendar></app-calendar>
+<app-preferred-day></app-preferred-day>
