--- a/angular/src/app/calendar/calendar.component.html
+++ b/angular/src/app/calendar/calendar.component.html
@@ -21,11 +21,11 @@
     <div class="option-option-button">
       <div class="flex items-center space-x-8 rounded-2xl border px-4 py-1" id="week"
         [ngStyle]="{'background-color': '#1ABAC5','outline': '2px solid transparent','outline-offset': '2px'}">
-        <a class="option" type="button" [ngStyle]="{'color': 'white'}" (click)=" Popup()"> Request Leave </a>
+        <a class="option" type="button" [ngStyle]="{'color': 'white'}" (click)=" OpenNotification()"> Request Leave </a>
       </div>
     </div>
 
-    
+
   </div>
 </div>
 
@@ -36,56 +36,4 @@
 <div *ngIf="this.changeCalendar == 3">
   <app-calendar-table></app-calendar-table>
 </div>
-
-<div [ngClass]="{'popup':isPopup,'popup-close':!isPopup}">
-  <div class="content border-black rounded-3 ">
-    <div class="fw-bold fs-6 py-4 text d-flex justify-content-between px-4">
-      <div class="text-white">LEAVE REQUEST</div>
-      <i (click)="Popup()" class="bi bi-x text-white fs-5"></i>
-    </div>
-    <form class="row px-4">
-      <div class="mb-3 mt-3">
-        <label>LEAVE TYPE</label>
-        <select ngModel name="contactMethod" class="form-select">
-          <option value="">Select type</option>
-          <option *ngFor="let type of types">
-            {{ type }}
-          </option>
-        </select>
-      </div>
-      <div class="mb-3 col-6">
-        <label for="date-from" class="font-bold">DATE FROM</label>
-        <input type="text" name="date-from" ngModel #firstName="ngModel" value="" class="form-control" />
-        <!-- <mat-card class="demo-inline-calendar-card">
-          <mat-calendar></mat-calendar>
-        </mat-card> -->
-      </div>
-      <div class="mb-3 col-6">
-        <label for="date-to">DATE TO</label>
-        <input type="text" name="date-to" ngModel #lastName="ngModel" class="form-control" />
-      </div>
-      <div class="mb-3 ">
-        <input type="checkbox" (click)="addAll()" ngModel name="all" class="form-check-input me-2" id="all" />
-        <label class="form-check-label" for="all">All Day</label>
-      </div>
-      <div *ngIf="!isAll" class="mb-3 col-6">
-        <label for="star" class="font-bold">START TIME</label>
-        <input type="text" name="start" ngModel #star="ngModel" class="form-control" />
-      </div>
-      <div *ngIf="!isAll" class="mb-3 col-6">
-        <label for="end">END TIME</label>
-        <input type="text" name="end" ngModel #end="ngModel" class="form-control" />
-      </div>
-      <div class="mb-3 d-flex flex-column">
-        <label for="comment">COMMENT</label>
-        <textarea class="rounded-3" name="comment">
-        </textarea>
-      </div>
-      <div class="mb-3 ">
-        <button class="btn-save border-0 py-2 px-4 rounded-4">Save</button>
-        <button (click)="Popup()"
-          class="bg-white border border-1 border-black btn-cancel py-2 px-4 ms-3 rounded-4">Cancel</button>
-      </div>
-    </form>
-  </div>
-</div>
+<app-popup-form (isClosePopupEvent)="ClosePopup($event)" [isClick]="isClick"  [isOpenPopup] = "isOpenPopup"></app-popup-form>
