--- a/angular/src/app/preferred-day/preferred-day.component.html
+++ b/angular/src/app/preferred-day/preferred-day.component.html
@@ -1,5 +1,5 @@
 <!-- <div *ngIf="isAddShift"> -->
-    <div class="mt-2">Select your preferred days</div>
+    <label class="mt-2">Select your preferred days</label>
     <ul class="d-flex btn-day flex-wrap border rounded-3 p-0 ms-0  mt-3 ">
         <li (click)="isAllActive()" [ngClass]="{'active':activeAll}" class=" curso-pointer px-2 py-2">
             <a>All day</a>
