--- a/angular/src/app/header-custom/header-custom.component.html
+++ b/angular/src/app/header-custom/header-custom.component.html
@@ -6,14 +6,14 @@
     </div>
     <ul class="d-flex justify-content-start mt-2">
         <li class="pt-2 mx-3">
-            <a routerLinkActive="active" routerLink="/app/profile" routerLinkActive="active"
+            <a routerLinkActive="active" routerLink="profile" routerLinkActive="active"
                 [routerLinkActiveOptions]="{exact:true}" class="text-white ">
                 <i class="bi bi-person-fill fs-4 me-2"></i>
                 <input routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" type="button" value="Profile">
             </a>
         </li>
         <li class="pt-2 mx-3">
-            <a routerLinkActive="active" routerLink="/app/calendar" routerLinkActive="active"
+            <a routerLinkActive="active" routerLink="calendar" routerLinkActive="active"
                 [routerLinkActiveOptions]="{exact:true}" class="text-white ">
                 <i class="bi bi-calendar-week fs-4 me-2"></i>
                 <input routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" type="button"
@@ -21,7 +21,7 @@
             </a>
         </li>
         <li class="pt-2 mx-3">
-            <a routerLinkActive="active" routerLink="/app/shiftOffer" routerLinkActive="active"
+            <a routerLinkActive="active" routerLink="shiftOffer" routerLinkActive="active"
                 [routerLinkActiveOptions]="{exact:true}" class="text-white ">
                 <i class="bi bi-window-dash fs-4 me-2"></i>
                 <input routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" type="button"
