--- a/angular/src/app/table-week/table-week.component.html
+++ b/angular/src/app/table-week/table-week.component.html
@@ -1,9 +1,8 @@
-
 <ul class="d-flex border boder-black rounded-3 p-0">
     <li *ngFor="let day of infoUpdate" class="flex-fill border-1 border-start">
         <div class="head-day ps-3 py-2 ">{{this.day[0]}}</div>
         <div *ngIf="this.changeCalendar == 1">
-            <app-table-item-roster></app-table-item-roster>
+            <app-table-item-roster [rosters]="getItemRosterOfDay(day[1])"></app-table-item-roster>
         </div>
         <div *ngIf="this.changeCalendar == 2">
             <div class="avai-calendar">
@@ -14,7 +13,6 @@
             <div class="avai-calendar">
                 <app-table-item-shift-offer [shiftList]="getItemTable(day[1])"></app-table-item-shift-offer>
             </div>
-            
         </div>
     </li>
 
