--- a/angular/src/app/table-item-availability/table-item-availability.component.html
+++ b/angular/src/app/table-item-availability/table-item-availability.component.html
@@ -1,4 +1,4 @@
 <div class="avai-calendar">
-    <a>08:00 – 18:00</a>
-  </div>
+    <!-- <a>{{leaves[0].fromTime.format("hh:mm")}} – 18:00</a> -->
+</div>
 
