--- a/angular/src/app/calendar/calendar.component.html
+++ b/angular/src/app/calendar/calendar.component.html
@@ -1,4 +1,4 @@
-<!-- <navbar></navbar> -->
+<app-header-custom></app-header-custom>
 <div class="option d-flex">
   <div class="option-button d-flex">
     <div class="flex items-center space-x-8 rounded-2xl border px-4 py-1" id="roster" (click)="RosterButton()"
@@ -33,6 +33,6 @@
   <app-table-week [infoUpdate] = "messager" [changeCalendar] = "changeCalendar" [rosters]="rosters"></app-table-week>
 </div>
 <div *ngIf="this.changeCalendar == 3">
-  <app-calendar-table></app-calendar-table>
+  <app-table-leave [leaves]="leaves" [leaveCreated]="leaveCreated"></app-table-leave>
 </div>
-<app-popup-form (isClosePopupEvent)="ClosePopup($event)" [isClick]="isClick"  [isOpenPopup] = "isOpenPopup"></app-popup-form>
+<app-popup-form (isClosePopupEvent)="ClosePopup($event)" [isClick]="isClick"  [isOpenPopup] = "isOpenPopup" (createNewLeaveEvent)="getAllLeaves()" ></app-popup-form>
