--- a/angular/src/app/input/input.component.html
+++ b/angular/src/app/input/input.component.html
@@ -1,4 +1,4 @@
-<label class="font-bold" for="firstName">{{title}}</label>
+<label class="font-normal" for="firstName">{{title}}</label>
 <input [(ngModel)]="content" required name="{{title}}" #firstName="ngModel" type="{{typeInput}}" [ngModelOptions]="{standalone: true}" class="input border px-2"  value="" [placeholder]="title"/>
 <div
     *ngIf="firstName.invalid && (firstName.touched)"
