--- a/angular/src/app/profile/profile.component.html
+++ b/angular/src/app/profile/profile.component.html
@@ -1,4 +1,3 @@
-<app-header-custom [user]="this.user" ></app-header-custom>
 <div class="row">
     <div class="col-2"></div>
     <div class="col-8">
@@ -14,7 +13,7 @@
                     <div>
                         <div class="flex flex-row">
                             <div class="mb-4 flex-1-1">
-                                <app-input #firstname [content]="user.name" title="FirstName">FirstName</app-input>
+                                <app-input #firstname [content]="user.name" title="FirstName">FirstName</app-input>     
                             </div>
                             <div class="mb-4 flex-1-1">
                                 <app-input #lastname [content]="user.surname" title="LastName">LastName</app-input>
@@ -36,8 +35,8 @@
                         <div class="mb-4 flex-1-1">
                             <app-input #phone [content]="user.phone" title="Phone">Phone</app-input>
                         </div>
-                    </div>
-            </app-form-table>
+                    </div>           
+            </app-form-table>       
            <app-form-table>
                     <h3>Additional shifts register settings</h3>
                     <div class="form-check">
@@ -53,16 +52,16 @@
                         </label>
                     </div>
                     <div class="form-check ">
-                        <input class="form-check-input" type="checkbox" (click)="isEnable()" [checked]="isEnable" value="" id="additionalShift" [(ngModel)]="user.isAdditionalShift">
+                        <input class="form-check-input" type="checkbox" (click)="isEnable()" value="" name="additionalShift" id="additionalShift" [(ngModel)]="user.isAdditionalShift">
                         <label class="form-check-label" for="additionalShift">
                             Available for Additional Shift(Days and Times)
                         </label>
                     </div>
-                    <div class="padding-div-enable" *ngIf="enable ? 'disable' : ''">
+                    <div class="padding-div-enable" *ngIf="this.user.isAdditionalShift">
                         <div class="flex flex-col ">
                               <app-preferred-day #prefer [user]="user"></app-preferred-day>
                         </div>
-
+                        
                         <div class="flex flex-col mt-1">
                             <label>Select your available time range</label>
                             <div class="inline-flex item-center mt-1">
@@ -73,7 +72,7 @@
                         </div>
                     </div>
                 </app-form-table>
-
+            
             <button class="radius-button btn bgr-color-primary" >Save Changes</button>
         </div>
     </form>
