--- a/angular/src/app/table-week/table-week.component.html
+++ b/angular/src/app/table-week/table-week.component.html
@@ -7,7 +7,7 @@
         </div>
         <div *ngIf="this.changeCalendar == 2">
             <div class="avai-calendar">
-                <app-table-item-availability [leaves]="getItemLeaveOfDay(day[1])"></app-table-item-availability>
+                <app-table-item-availability [avaib]="getItemLeaveOfDay(day[1])"></app-table-item-availability>
             </div>
         </div>
         <div *ngIf="this.changeCalendar == 3">
