--- a/angular/src/app/table-item-roster/table-item-roster.component.css
+++ b/angular/src/app/table-item-roster/table-item-roster.component.css
@@ -28,7 +28,453 @@ li {
 }
 
 .align-super {
-    height: 80px;
+    height: 81px;
     width: 12px;
     background-color: #0066B3;
 }
+
+div div.hover {
+    display: none;
+}
+div:hover div.hover {
+    display: inline-block;
+}
+
+.div-table{
+    padding-left: 2rem;
+    padding-right: 2rem;
+    margin-top: 3rem;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 80rem;
+}
+
+.flex{
+    display: flex;
+}
+
+.margin-left{
+    margin-left: 0.5rem;
+}
+
+.margin-left-1{
+    margin-left: 0.25rem;
+}
+.flex-1-1{
+    flex:1 1 0%;
+}
+
+.py-1{
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+}
+
+.py-2{
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+}
+
+.px-4{
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
+.px-1{
+    padding-left: 0.25rem;
+    padding-right: 0.25rem;
+}
+
+.border{
+    border-width: 1px;
+}
+
+.border-radius-1{
+    border-radius: 0.5rem;
+}
+
+.border-radius-2{
+    border-radius: 1rem;
+}
+
+.border-radius-3{
+    border-radius: 0.25rem;
+}
+
+.item-center{
+    align-items: center;
+}
+
+.height-width{
+    height: 35px;
+    width: 260px;
+}
+
+.height-width-1{
+    height: 35px;
+    width: 400px;
+}
+.text-sm{
+    font-size: medium;
+}
+
+.text-align{
+    text-align: center;
+}
+
+.width-100{
+    width: 100%;
+}
+
+.cursor{
+    cursor: pointer;
+}
+
+.black-color{
+    color: black;
+}
+
+.mt-6{
+    margin-top: 1.5rem;
+}
+
+.flex-col{
+    flex-direction: row;
+}
+
+ul{
+    list-style: none;
+    padding-left: 0px;
+}
+
+.min-width-170{
+    min-width: 170px;
+}
+
+.font-width{
+    font-weight: 600;
+}
+
+.p-2{
+    padding: 0px;
+}
+
+.justify-center {
+    justify-content: center;
+}
+
+.h-40 {
+    height: 10rem;
+}
+
+.bgr-color-blue{
+    background-color: rgb(128 217 223/.2);
+}
+
+.bgr-color-gray{
+    background-color: rgb(229 231 235/1)
+}
+
+.overflow-hidden{
+    overflow: hidden;
+}
+.w-3 {
+    width: 0.75rem;
+}
+
+.align-super {
+    vertical-align: super;
+}
+
+.bgr-color-blue-1{
+    background-color:rgb(0 102 179/1);
+}
+
+.bgr-color-blue-2{
+    background-color:rgb(179 209 232/1);
+}
+
+.bgr-color-white{
+    background-color:rgb(255 255 255/1);
+}
+
+.text-xs {
+    font-size: .75rem;
+    line-height: 1rem;
+}
+
+.margin-x-y{
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+}
+
+.margin-x-y-1{
+    margin-top: 0.05rem;
+}
+
+div div.hover {
+    display: none;
+}
+div:hover div.hover {
+    display: block;
+}
+
+.button-color-acc{
+    background-color: rgb(0 178 190/1);
+
+}
+
+.swal2-icon.swal2-question {
+    border-color: #c9dae1;
+    color: #87adbd;
+}
+
+.swal2-icon.swal2-question.swal2-icon-show {
+    -webkit-animation: swal2-animate-error-icon .5s;
+    animation: swal2-animate-error-icon .5s;
+}
+
+.swal2-icon {
+    position: relative;
+    box-sizing: content-box;
+    justify-content: center;
+    width: 5em;
+    height: 5em;
+    margin: 2.5em auto 0.6em;
+    border: 0.25em solid transparent;
+    border-radius: 50%;
+    border-color: #000;
+    font-family: inherit;
+    line-height: 5em;
+    cursor: default;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.swal2-icon .swal2-icon-content {
+    display: flex;
+    align-items: center;
+    font-size: 3.75em;
+}
+
+@keyframes example {
+    0%   {transform: rotateY(0deg);}
+  
+    100% {transform: rotateY(360deg);}
+}
+
+.swal2-icon-content {
+    animation-name: example;
+    animation-duration: 0.75s;
+}
+
+.text-white {
+    color: rgb(255 255 255/1);
+}
+.font-medium {
+    font-weight: 500;
+}
+.text-sm {
+    font-size: .875rem;
+    line-height: 1.25rem;
+}
+.px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
+}
+.py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+}
+.bg-primary-800 {
+    background-color: rgb(0 178 190/1);
+}
+.border {
+    border-width: 1px;
+}
+.rounded-full {
+    border-radius: 9999px;
+}
+
+.bg-red-500{
+    background-color: rgb(239 68 68/1);
+}
+
+.swal2-html-container {
+    z-index: 1;
+    justify-content: center;
+    margin: 1.5em 2em 1.6em;
+    padding: 0;
+    overflow: auto;
+    color: inherit;
+    font-size: 1.125em;
+    font-weight: 400;
+    line-height: normal;
+    text-align: center;
+    word-wrap: break-word;
+    word-break: break-word;
+}
+
+.align-super {
+    height: 100%;
+    width: 12px;
+    background-color: #0066B3;
+  }
+  
+  .align-super2 {
+    height: 116px;
+    width: 12px;
+    background-color: #0066B3;
+  }
+  
+  
+  .head-day {
+    background-color: #E5E7EB;
+  }
+  
+  .content-day {
+    background-color: #B3D1E8;
+    font-size: 13px;
+  }
+  
+  .button {
+    background-color: white;
+  }
+  
+  .active {
+    color: white;
+    background-color: #1ABAC5;
+  }
+  
+  .content-two {
+    height: 177px;
+    background-color: #E6F7F9;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .btn-request {
+    color: white;
+    background-color: #1ABAC5;
+  }
+  
+  .popup {
+    display: block;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
+  }
+  
+  .popup-close {
+    display: none;
+  }
+  
+  .content {
+    background-color: #fefefe;
+    margin: 5% auto;
+    height: auto;
+    width: 576px;
+  }
+  
+  .text {
+    border-top-left-radius: 0.5rem;
+    border-top-right-radius: 0.5rem;
+    background-color: black;
+  }
+  
+  textarea {
+    height: 70px;
+  }
+  
+  .btn-save {
+    background-color: #00B2BE;
+    color: white;
+  
+  }
+  
+  .bi-x {
+    cursor: pointer;
+  }
+  
+  .popup {
+    display: block;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
+  }
+  
+  .popup-close {
+    display: none;
+  }
+  
+  .content {
+    position: relative;
+    background-color: #fefefe;
+    margin: 5% auto;
+    height: auto;
+    width: 510px;
+  }
+  
+  .content-insigh {
+    display: grid;
+    grid-column: 2;
+    grid-row: 2;
+    align-self: center;
+    justify-self: center;
+  }
+  
+  .text-popup {
+    margin: 1em 1.6em 0.3em;
+    padding: 0;
+    font-size: 1.125em;
+    font-weight: 400;
+    line-height: normal;
+    text-align: center;
+  }
+  
+  .icon {
+    display: flex;
+    position: relative;
+    justify-content: center;
+    margin: 2.5em auto 0.6em;
+    border: 0.35em solid transparent;
+    border-radius: 50%;
+    width: 7em;
+    height: 7em;
+  
+    border-color: #C9DAE1;
+  }
+  
+  .icon-content {
+    display: flex;
+    align-items: center;
+    font-size: 55px;
+    color: #87ADBD;
+    animation-name: example;
+    animation-duration: 0.75s;
+  }
+  
+  .btn-no{
+    background-color: #DC2626;
+  }
+  
+  @keyframes example {
+    0%   {transform: rotateY(0deg);}
+  
+    100% {transform: rotateY(360deg);}
+  }
+  
